# PetTapProject

./: AccelerometerHandler.c  AccelerometerHandler.h  CMakeLists.txt  README.md  nrf9160dk_nrf9160.overlay  prj.conf
.cache/clangd/index/: main.c.2BA01ACE6AD80614.idx
DA16200Wifi/: Setup Wiring and AT commands for DA16200.docx  Setup Wiring and AT commands for nRF location chara sends.docx  Setup_Wiring_AT_DA_nRF.docx
DA16200Wifi/img/img/: DA16200_FBOOT-GEN01-01-c7f4c6cc22_W25Q32JW.img  DA16200_FRTOS-GEN01-01-f017bfdf51-006558.img
nRF9160Master/: CMakeLists.txt  Kconfig  prj.conf
nRF9160Master/boards/: nrf9160dk_nrf9160_ns.overlay
nRF9160Master/src/: main.c
nRF9160Master/src/BLE/: BleHandler.c  BleHandler.h
nRF9160Master/src/BMS/: BMHandler.c  BMHandler.h
nRF9160Master/src/MC3630/: AccelerometerHandler.c  AccelerometerHandler.h
nRF9160Master/src/NVS/: NvsHandler.c  NvsHandler.h
nRF9160Master/src/PacketHandler/: PacketHandler.c  PacketHandler.h
nRF9160Master/src/System/: SystemHandler.c  SystemHandler.h
nRF9160Master/src/Temp_MCP/: TempAdcHandler.c  TempAdcHandler.h
nRF9160Master/src/WiFi/: WiFiHandler.c  WiFiHandler.h
nRf52840peripheral/: CMakeLists.txt  prj.conf
nRf52840peripheral/boards/: nrf52840dk_nrf52840.overlay
nRf52840peripheral/src/: main.c
nRf52840peripheral/src/BLE/: BleHandler.c  BleHandler.h  BleService.c  BleService.h
nRf52840peripheral/src/NFC/: Nfc.c  Nfc.h
nRf52840peripheral/src/PacketHandler/: PacketHandler.c  PacketHandler.h
nRf52840peripheral/src/System/: SystemHandler.c  SystemHandler.h
src/: main.c
(+25 files in other folders)
